# AloneCompiler

./: .gitignore  AloneCompiler.h  AloneCompiler.sln  AloneCompiler.sln.DotSettings  AloneCompiler.vcxproj  AloneCompiler.vcxproj.filters  CMakeLists.txt  LICENSE.txt  README.md  example.amasm  main.cpp  pseudocode
.github/workflows/: cmake-single-platform.yml
res/: amasm_features.md  datatypes.txt  example.amasm  instructions.md  isa.txt  match_test.amasm  output.txt  reserve.amasm  temp.txt
src/: error_codes.hpp  general.cpp  general.hpp  info.hpp  instructions.cpp  instructions.hpp  isa_general.hpp  isa_linker.hpp  isa_system.hpp  main.cpp  util.cpp  util.hpp  virtual_machine.cpp  virtual_machine.hpp  vm_context.cpp  vm_context.hpp
src/amasm/: arguments.hpp  context.cpp  context.hpp  data_types.hpp  include.cpp  include.hpp  info.cpp  info.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  tokens.hpp  translator.cpp  translator.hpp  util.hpp
src/amasm/info/: arguments.hpp  consts.cpp  consts.hpp  context.cpp  context.hpp  data_types.cpp  data_types.hpp  datatypes.hpp  enums.hpp  extras.cpp  extras.hpp  functions.cpp  functions.hpp  include.hpp  instructions.cpp  instructions.hpp  parse_rules.cpp  parse_rules.hpp  tokens.cpp  tokens.hpp  variables.cpp  variables.hpp
src/compiler/: context.cpp  context.hpp  datatypes.cpp  datatypes.hpp  functions.cpp  functions.hpp  include.hpp  info.hpp  instructions.cpp  instructions.hpp  lexer.cpp  lexer.hpp  main.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  tokens.cpp  translator.cpp  translator.hpp  variables.cpp  variables.hpp
src/compiler/info/: address.hpp  arguments.hpp  constant.hpp  constant_builder.cpp  constant_builder.hpp  context.cpp  context.hpp  datatype.hpp  datatype_builder.cpp  datatype_builder.hpp  datatypes.cpp  datatypes.hpp  function.hpp  function_builder.cpp  function_builder.hpp  functions.cpp  functions.hpp  inst_info_factory.cpp  inst_info_factory.hpp  instruction.hpp  instruction_builder.cpp  instruction_builder.hpp  instruction_factory.cpp  instructions.cpp  instructions.hpp  layers.cpp  layers.hpp  scope.cpp  scope.hpp  scope_container.hpp  scope_element.cpp  scope_element.hpp  scope_info.cpp  scope_info.hpp  scope_proxy.cpp  scope_proxy.hpp  tokens.cpp  tokens.hpp  variable.hpp  variable_builder.cpp  (+3 more)
src/executor/: constants.hpp  context.cpp  context.hpp  instruction.hpp  instruction_builder.cpp  instruction_builder.hpp  instructions.cpp  instructions.hpp  isa.hpp  isa_factory.cpp  isa_factory.hpp  isa_funcs.hpp  signatures.hpp  util.cpp  util.hpp  virtual_machine.cpp  virtual_machine.hpp
src/isa/: general.hpp  linker.hpp  size_related.cpp  size_related.hpp  system.cpp  system.hpp  type_related.cpp  type_related.hpp  universal.hpp
src/shared/: bytecode.cpp  bytecode.hpp  general_functions.cpp  general_functions.hpp  literals.cpp  literals.hpp  registers.hpp  types.hpp
src/vm/: info.hpp  util.cpp  util.hpp  virtual_machine.cpp  virtual_machine.hpp
src/vm/isa/: arithmetic.cpp  arithmetic.hpp  general.hpp  linker.hpp  system.hpp
